# ProjectOS

./: .env.example  .gitignore  CLAUDE.md  README.md
src/backend/: CLAUDE.md  projectos_mcp_stdio.py  pyproject.toml  user.json
src/backend/app/: config.py  main.py  mcp_tools.py  skills.py
src/backend/app/agents/: CLAUDE.md  analysis_agent.py  claude_task_graph_builder_agent.py  graph_builder_agent.py  obsidian_writer_agent.py  ontology_agent.py  parser_agent.py  profile_agent.py  query_agent.py  simulation_agent.py
src/backend/app/api/: CLAUDE.md  chat.py  digest.py  google.py  graph.py  mcp.py  projects.py  settings.py  skills.py  user.py
src/backend/app/models/: graph.py  vault.py
src/backend/app/services/: autoresearch.py  capture_context.py  citation_validator.py  digest.py  document_hash_store.py  google_connector.py  graph_context.py  graph_review.py  hot_context.py  inbox.py  retrieval_index.py  task_manager.py  vault_reconcile.py  watcher.py
src/backend/app/utils/: achievement_refinement.py  claude_task_runner.py  embedding_client.py  entity_canonicalization.py  entity_normalization.py  entity_resolver.py  entity_validation.py  graph_health.py  graph_normalization.py  graph_patch.py  graph_restructure.py  hybrid_retrieval.py  isolated_reextract.py  llm_client.py  llm_dedup.py  logger.py  routing.py  semantic_dedup.py  trace.py  user_config.py
src/backend/tests/: conftest.py  test_mcp_stdio.py
src/backend/tests/test_agents/: test_analysis_agent.py  test_claude_task_graph_builder_agent.py  test_graph_build_trigger.py  test_graph_builder.py  (+9 more)
(+177 files in other folders)
